--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Inter:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Inter:wght@600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Meet Our Team</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <header>
+
+        </header>
+
+        <main>
+            <p>
+
+            </p>
+            <div>
+                <section><!--Marco Bianchi -->
+
+                </section>
+
+                <section><!-- Laura Rossi -->
+
+                </section>
+
+                <section><!-- Giorgio Verdi -->
+
+                </section>
+
+                <section><!-- Marta Ipsum -->
+
+                </section>
+
+                <section><!-- Roberto Lorem -->
+
+                </section>
+
+                <section><!-- Daniela Amet-->
+
+                </section>
+
+
+            </div>
+
+        </main>
+
+    </div>
+
 </body>
+
 </html>
