--- a/index.html
+++ b/index.html
@@ -13,38 +13,40 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper debug">
         <header>
-
+          <h1 id="title">
+            Meet Our Team
+          </h1>
         </header>
 
         <main>
-            <p>
-
+            <p class="debug">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat laborum temporibus ab eveniet hic, rerum reprehenderit sit id quibusdam sapiente odio quae explicabo quo at ullam incidunt possimus quam numquam ipsum. Exercitationem nemo quibusdam consequuntur doloremque quasi tenetur? Hic autem quae, accusamus ipsam omnis pariatur at dignissimos nostrum dolores.
             </p>
-            <div>
-                <section><!--Marco Bianchi -->
-
+            <div class="debug clearfix">
+                <section class="debug clearfix float-left clearfix"><!--Marco Bianchi -->
+                    <img src="Images/male1.png" alt="Marco Bianchi">
                 </section>
 
-                <section><!-- Laura Rossi -->
-
+                <section class="debug clearfix float-left clearfix"><!-- Laura Rossi -->
+                    <img src="Images/female1.png" alt="Laura Rossi">
                 </section>
 
-                <section><!-- Giorgio Verdi -->
-
+                <section class="debug clearfix float-left clearfix"><!-- Giorgio Verdi -->
+                    <img src="Images/male2.png" alt="Giorgio Verdi">
                 </section>
 
-                <section><!-- Marta Ipsum -->
-
+                <section class="debug clearfix float-left clearfix"><!-- Marta Ipsum -->
+                    <img src="Images/female2.png" alt="Marta Ipsum">
                 </section>
 
-                <section><!-- Roberto Lorem -->
-
+                <section class="debug clearfix float-left clearfix"><!-- Roberto Lorem -->
+                    <img src="Images/male3.png" alt="oberto Lorem">
                 </section>
 
-                <section><!-- Daniela Amet-->
-
+                <section class="debug clearfix float-left clearfix"><!-- Daniela Amet-->
+                    <img src="Images/female3.png" alt="Daniela Amet">
                 </section>
 
 
