--- a/index.html
+++ b/index.html
@@ -25,31 +25,40 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat laborum temporibus ab eveniet hic, rerum reprehenderit sit id quibusdam sapiente odio quae explicabo quo at ullam incidunt possimus quam numquam ipsum. Exercitationem nemo quibusdam consequuntur doloremque quasi tenetur? Hic autem quae, accusamus ipsam omnis pariatur at dignissimos nostrum dolores.
             </p>
             <div class="debug clearfix">
-                <section class="debug clearfix float-left clearfix"><!--Marco Bianchi -->
-                    <img src="Images/male1.png" alt="Marco Bianchi">
+                <section class="debug clearfix float-left"><!--Marco Bianchi -->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/male1.png" alt="Marco Bianchi">
+                    </div>
                 </section>
 
-                <section class="debug clearfix float-left clearfix"><!-- Laura Rossi -->
-                    <img src="Images/female1.png" alt="Laura Rossi">
+                <section class="debug clearfix float-left"><!-- Laura Rossi -->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/female1.png" alt="Laura Rossi">
+                    </div>
                 </section>
 
-                <section class="debug clearfix float-left clearfix"><!-- Giorgio Verdi -->
-                    <img src="Images/male2.png" alt="Giorgio Verdi">
+                <section class="debug clearfix float-left"><!-- Giorgio Verdi -->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/male2.png" alt="Giorgio Verdi">
+                    </div>
+                </section>
+                <section class="debug clearfix float-left"><!-- Marta Ipsum -->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/female2.png" alt="Marta Ipsum">
+                    </div>
                 </section>
 
-                <section class="debug clearfix float-left clearfix"><!-- Marta Ipsum -->
-                    <img src="Images/female2.png" alt="Marta Ipsum">
+                <section class="debug clearfix float-left"><!-- Roberto Lorem -->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/male3.png" alt="Roberto Lorem">
+                    </div>
                 </section>
 
-                <section class="debug clearfix float-left clearfix"><!-- Roberto Lorem -->
-                    <img src="Images/male3.png" alt="oberto Lorem">
+                <section class="debug clearfix float-left"><!-- Daniela Amet-->
+                    <div class="debug float-left clearfix img-size">
+                        <img src="Images/female3.png" alt="Daniela Amet">
+                    </div>
                 </section>
-
-                <section class="debug clearfix float-left clearfix"><!-- Daniela Amet-->
-                    <img src="Images/female3.png" alt="Daniela Amet">
-                </section>
-
-
             </div>
 
         </main>
