--- a/index.html
+++ b/index.html
@@ -27,132 +27,103 @@
                 numquam ipsum. Exercitationem nemo quibusdam consequuntur doloremque quasi tenetur? Hic autem quae,
                 accusamus ipsam omnis pariatur at dignissimos nostrum dolores.
             </p>
-            <div class="debug clearfix">
-                <div class="box-size debug clearfix float-left"><!--Marco Bianchi -->
+            <div id="main-box" class="debug clearfix">
+                <div class="box-sizing debug float-left clearfix"><!--Marco Bianchi --> 
+                    <div id="marco" class="debug img-sizing float-left clearfix">
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/male1.png" alt="Marco Bianchi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Marco Bianchi
-                            </h2>
-                            <h4 class="description"> 
-                                Designer
-                            </h4>
-                            <h4 class="mail">
-                                marcobianchi@team.com
-                            </h4>
-
-                        </article>
                     </div>
-                    
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Marco Bianchi
+                        </h2>
+                        <h4 class="description"> 
+                            Designer
+                        </h4>
+                        <h4 class="mail">
+                            marcobianchi@team.com
+                        </h4>
+                    </div>
                 </div>
-                <div class="box-size debug clearfix float-left"><!--Laura Rossi -->
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/female1.png" alt="Laura Rossi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Laura Rossi
-                            </h2>
-                            <h4 class="description"> 
-                                Front-End Developer
-                            </h4>
-                            <h4 class="mail">
-                                laurarossi@team.com
-                            </h4>
+                <div class="box-sizing debug float-left clearfix"><!--Laura Rossi -->
+                    <div id="laura" class="debug img-sizing float-left clearfix">
 
-                        </article>
                     </div>
-
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Laura Rossi
+                        </h2>
+                        <h4 class="description"> 
+                            Front-End Developer
+                        </h4>
+                        <h4 class="mail">
+                            laurarossi@team.com
+                        </h4>
+                    </div>
                 </div>
-                <div class="box-size debug clearfix float-left"><!--Giorgio Verdi -->
+                <div class="box-sizing debug float-left clearfix"><!--Giorgio Verdi -->
+                    <div id="giorgio" class="debug img-sizing float-left clearfix">
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/male2.png" alt="Marco Bianchi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Giorgio Verdi
-                            </h2>
-                            <h4 class="description"> 
-                                Back-End Developer
-                            </h4>
-                            <h4 class="mail">
-                                giorgioverdi@team.com
-                            </h4>
-
-                        </article>
                     </div>
-
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Giorgio Verdi
+                        </h2>
+                        <h4 class="description"> 
+                            Back-End Developer
+                        </h4>
+                        <h4 class="mail">
+                            giorgioverdi@team.com
+                        </h4>
+                    </div>
                 </div>
-                <div class="box-size debug clearfix float-left"><!--Marta Ipsum -->
+                <div class="box-sizing debug float-left clearfix"><!--Marta Ipsum -->
+                    <div id="marta" class="debug img-sizing float-left clearfix">
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/female2.png" alt="Marco Bianchi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Marta Ipsum
-                            </h2>
-                            <h4 class="description"> 
-                                SEO Specialist
-                            </h4>
-                            <h4 class="mail">
-                                martaipsum@team.com
-                            </h4>
-
-                        </article>
                     </div>
-
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Marta Ipsum
+                        </h2>
+                        <h4 class="description"> 
+                            SEO Specialist
+                        </h4>
+                        <h4 class="mail">
+                            martaipsum@team.com
+                        </h4>
+                    </div>
                 </div>
-                <div class="box-size debug clearfix float-left"><!--Roberto Lorem -->
+                <div class="box-sizing debug float-left clearfix"><!--Roberto Lorem -->
+                    <div id="roberto" class="debug img-sizing float-left clearfix">
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/male3.png" alt="Marco Bianchi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Roberto Lorem
-                            </h2>
-                            <h4 class="description"> 
-                                Project Manager
-                            </h4>
-                            <h4 class="mail">
-                                robertolorem@team.com
-                            </h4>
-
-                        </article>
                     </div>
-
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Roberto Lorem
+                        </h2>
+                        <h4 class="description"> 
+                            Project Manager
+                        </h4>
+                        <h4 class="mail">
+                            robertolorem@team.com
+                        </h4>
+                    </div>
                 </div>
-                <div class="box-size debug clearfix float-left"><!--Daniela Amet -->
+                <div class="box-sizing debug float-left clearfix"><!--Daniela Amet -->
+                    <div id="daniela" class="debug img-sizing float-left clearfix">
 
-                    <div class="debug box-settings">
-                        <div class="debug float-left clearfix img-size">
-                            <img src="Images/female3.png" alt="Marco Bianchi">
-                        </div>
-                        <article class="article-settings">
-                            <h2>
-                                Daniela Amet
-                            </h2>
-                            <h4 class="description"> 
-                                Analyst
-                            </h4>
-                            <h4 class="mail">
-                                danielaamet@team.com
-                            </h4>
-
-                        </article>
                     </div>
-
+                    <div class="debug text-setting float-left clearfix">
+                        <h2>
+                            Daniela Amet
+                        </h2>
+                        <h4 class="description"> 
+                            Analyst
+                        </h4>
+                        <h4 class="mail">
+                            danielaamet@team.com
+                        </h4>
+                    </div>
                 </div>
             </div>
 
